# notamify-sdk-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  local_service_run.py  notams_fetch.py  service_receiver.py
notamify_sdk/: __init__.py  client.py  cloudflared.py  config.py  models.py  receiver.py  signature.py
notamify_watcher_sdk/: __init__.py  client.py  cloudflared.py  config.py  models.py  receiver.py  signature.py
tests/: test_client.py  test_cloudflared.py  test_compat.py  test_config.py  test_models.py  test_receiver.py  test_signature.py
