[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notamify-sdk"
version = "0.1.0"
description = "Python SDK for Notamify APIs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  {name = "Damian Szumski"}
]
keywords = ["notam", "aviation", "webhook", "sdk"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "pydantic>=2,<3"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["notamify_sdk*", "notamify_watcher_sdk*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
managed = true
